汇报详情页面根据活动类型适配完成,布局稍微调整

--- a/app/src/main/res/drawable/edittext_border.xml
+++ b/app/src/main/res/drawable/edittext_border.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="#222121" />
+        android:color="#5a5656" />
 
 </shape>
