--- a/app/src/main/res/layout/activity_reprot.xml
+++ b/app/src/main/res/layout/activity_reprot.xml
@@ -6,16 +6,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="62dp"
         android:background="@color/firebrick">
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:text="汇报详情页面"
             android:textColor="#f4eeee"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -24,23 +23,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@drawable/edittext_border"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/layout0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
-                android:text="备注:"
                 android:textSize="20sp" />
 
             <EditText
@@ -49,23 +50,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_border" />
+                android:layout_marginTop="2dp"
+                android:background="@drawable/edittext_border"
+                android:paddingLeft="5dp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
-                android:text="备注:"
                 android:textSize="20sp" />
 
             <EditText
@@ -74,23 +77,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_border" />
+                android:layout_marginTop="2dp"
+                android:background="@drawable/edittext_border"
+                android:paddingLeft="5dp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
-                android:text="备注:"
                 android:textSize="20sp" />
 
             <EditText
@@ -99,23 +104,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_border" />
+                android:layout_marginTop="2dp"
+                android:background="@drawable/edittext_border"
+                android:paddingLeft="5dp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
-                android:text="备注:"
                 android:textSize="20sp" />
 
             <EditText
@@ -124,23 +131,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_border" />
+                android:layout_marginTop="2dp"
+                android:background="@drawable/edittext_border"
+                android:paddingLeft="5dp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
-                android:text="备注:"
                 android:textSize="20sp" />
 
             <EditText
@@ -149,23 +158,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_border" />
+                android:layout_marginTop="2dp"
+                android:background="@drawable/edittext_border"
+                android:paddingLeft="5dp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
-                android:text="备注:"
                 android:textSize="20sp" />
 
             <EditText
@@ -174,23 +185,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_border" />
+                android:layout_marginTop="2dp"
+                android:background="@drawable/edittext_border"
+                android:paddingLeft="5dp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/name6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="10dp"
-                android:text="备注:"
                 android:textSize="20sp" />
 
             <EditText
@@ -199,35 +212,44 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/edittext_border" />
+                android:layout_marginTop="2dp"
+                android:background="@drawable/edittext_border"
+                android:paddingLeft="5dp" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="2dp"
+            android:text="注:以上表格除备注外,均不能为空!"
+            android:textColor="#ff0000" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:gravity="center"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/commit"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="35dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/buttonborder"
                 android:text="提交"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/gouBack"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="35dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/buttonborder"
                 android:text="返回"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
 
