定位页面功能基本完成,只差接口回调经纬度

--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="62dp"
         android:background="@color/firebrick">
@@ -22,6 +23,28 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/locationLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/lacationImage"
+            android:layout_width="15dp"
+            android:layout_height="20dp"
+            android:src="@mipmap/dingwei" />
+
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/daka"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,26 +52,18 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/onAndOffDuty"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/buttonborder"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:text="上下班打卡"
-            android:textSize="18sp" />
+        <a1506a4.bwie.com.bwapp.view.MyCircleView
+            android:id="@+id/circleView1"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_centerHorizontal="true" />
 
-        <Button
-            android:id="@+id/Travel"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/buttonborder"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:text="出差打卡"
-            android:textSize="18sp" />
+        <a1506a4.bwie.com.bwapp.view.MyCircleView
+            android:id="@+id/circleView2"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp" />
 
     </LinearLayout>
 
