--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -12,8 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:text="打卡"
             android:textColor="#f4eeee"
             android:textSize="25sp"
