--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -154,7 +154,7 @@
     <!-- 中粉紫色 -->
     <color name="darkgoldenrod">#b8860b</color>
     <!-- 暗金黄色 -->
-    <color name="firebrick">#b22222</color>
+    <color name="firebrick">#C62F2F</color>
     <!-- 火砖色 -->
     <color name="powderblue">#b0e0e6</color>
     <!-- 粉蓝色 -->
