--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="62dp"
+        android:layout_height="35dp"
         android:background="@color/firebrick">
 
         <TextView
@@ -88,7 +88,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/edittext_border" />
+            android:background="@drawable/edittext_border"
+            android:paddingLeft="5dp" />
 
     </LinearLayout>
 
