标题栏颜色

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -155,6 +155,8 @@
     <color name="darkgoldenrod">#b8860b</color>
     <!-- 暗金黄色 -->
     <color name="firebrick">#C62F2F</color>
+    <color name="lanse">#87CEFA</color>
+
     <!-- 火砖色 -->
     <color name="powderblue">#b0e0e6</color>
     <!-- 粉蓝色 -->
