--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -7,7 +7,7 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:background="@color/firebrick">
+        android:background="@color/lanse">
 
         <TextView
             android:layout_width="wrap_content"
