--- a/app/src/main/res/drawable/tongzhi_selector.xml
+++ b/app/src/main/res/drawable/tongzhi_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/tongzhi1" android:state_checked="true" />
-    <item android:drawable="@drawable/tongzhi" android:state_checked="false" />
+    <item android:drawable="@mipmap/tongzhi1" android:state_checked="true" />
+    <item android:drawable="@mipmap/tongzhi" android:state_checked="false" />
 </selector>
