--- a/app/src/main/res/layout/commit_report_fragment.xml
+++ b/app/src/main/res/layout/commit_report_fragment.xml
@@ -5,38 +5,39 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:orientation="vertical">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/dayReport"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@drawable/buttonborder"
+            android:background="@mipmap/queding"
             android:text="日汇报"
             android:textSize="20sp" />
 
         <Button
             android:id="@+id/meetingReport"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_weight="1"
-            android:background="@drawable/buttonborder"
+            android:background="@mipmap/queding"
             android:text="例会汇报"
             android:textSize="20sp" />
 
         <Button
             android:id="@+id/actionReport"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:background="@drawable/buttonborder"
+            android:background="@mipmap/queding"
             android:text="活动汇报"
             android:textSize="20sp" />
     </LinearLayout>
