--- a/app/src/main/res/layout/punch_fragment.xml
+++ b/app/src/main/res/layout/punch_fragment.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="打卡"
-            android:textColor="#f4eeee"
+            android:textColor="#f77605"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/daka"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical">
 
         <TextView
@@ -79,6 +79,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="10dp"
             android:text="备注:"
+            android:textColor="#D27E20"
             android:textSize="16sp" />
 
         <EditText
@@ -88,7 +89,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/edittext_border"
+            android:background="@drawable/beizhu_border"
             android:paddingLeft="5dp" />
 
     </LinearLayout>
