--- a/app/src/main/res/layout/report_fragment.xml
+++ b/app/src/main/res/layout/report_fragment.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="汇报"
-            android:textColor="#f4eeee"
+            android:textColor="#f77605"
             android:textSize="25sp"
             android:textStyle="bold" />
 
