--- a/app/src/main/res/layout/send_notification_fragment.xml
+++ b/app/src/main/res/layout/send_notification_fragment.xml
@@ -16,6 +16,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_send_notification"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -25,6 +26,7 @@
             android:text="发送" />
 
         <Button
+            android:id="@+id/btn_sendAll_notification"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
